fix: Replace use of getLast in store